[project]
name = "posit-gcp-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibis-framework[bigquery]>=10.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "onnx<1.18",
    "orbitalml",
    "pandas-gbq>=0.28.1",
    "scikit-learn>=1.6.1",
    "skl2onnx<1.18",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
orbitalml = { git = "https://github.com/posit-dev/orbital.git" }
