[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.32.0",
    "pandas>=2.2.3",
    "pandas-gbq>=0.28.1",
    "plotnine>=0.14.5",
    "posit-sdk>=0.9.0",
    "streamlit>=1.45.1",
]
